# musicMixer-backend

./: .dockerignore  .env.production  .gitignore  CLAUDE.md  Dockerfile  architecture.excalidraw  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.zed/: tasks.json
data/: mashup_manifest.json
docs/impl/: ab-test-suite-plan.md
notes/: 2026-06-17-slice-7-upload-reassessment.md
scripts/: benchmark_gpu_separation.py  hetzner-setup.sh  mashup_pipeline.py  run_pipeline_phase.py  test_songformer_modal.py  warmup_shelf_stems.py
src/musicmixer/: config.py  logging_config.py  main.py  models.py
src/musicmixer/api/: remix.py  shelf.py  stats.py  thumbnail.py
src/musicmixer/modal_apps/: separation.py  structure.py
src/musicmixer/services/: analysis.py  audio_utils.py  candidate_planner.py  cleanup.py  ducking.py  eq.py  gain_mapper.py  interpreter.py  key_matching.py  lyrics.py  mastering.py  mixer.py  multiband.py  pipeline.py  pipeline_day1.py  pipeline_metrics.py  processor.py  pulsemap.py  remix_cache.py  remix_stages.py  renderer.py  separation.py  separation_local.py  separation_modal.py  sms.py  song_cache.py  spectral.py  stem_cache.py  structure_ml.py  structure_modal.py  taste_constraints.py  taste_features.py  taste_logging.py  taste_model.py  taste_stage.py  tempo.py  thumbnail.py  youtube.py
src/musicmixer/training/: __init__.py  analyze.py  dataset.py  download.py  negatives.py  reconstruct.py  train.py  validate.py
static/: index.html
tests/: conftest.py  test_analysis.py  test_api.py  test_cache_correctness.py  test_candidate_planner.py  test_cleanup.py  test_ducking.py  test_eq.py  test_gain_mapper.py  test_interpreter.py  test_key_matching.py  test_key_transposition.py  test_lyrics.py  test_mastering.py  test_mixer.py  test_multiband.py  test_notify_endpoint.py  test_pipeline.py  test_pipeline_sse.py  test_pipeline_stem_cache.py  test_pipeline_wiring.py  test_pre_trim.py  test_processor.py  test_public_endpoint.py  test_pulsemap.py  test_queue_contract.py  test_remix_cache.py  test_remix_stages.py  test_renderer.py  test_separation.py  test_share_link.py  test_shelf.py  test_sms.py  test_song_cache.py  test_song_structure.py  test_spectral.py  test_startup_guard.py  test_stats.py  test_stem_cache.py  test_stem_cache_coordination.py  (+21 more)
