[project]
name = "musicmixer"
version = "0.1.0"
description = "AI-powered music remix tool"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.133.0",
    "librosa>=0.11.0",
    "modal>=1.3.4",
    "mutagen>=1.47.0",
    "numpy>=2.4.2",
    "pedalboard>=0.9.0",
    "pydantic-settings>=2.13.1",
    "pydub>=0.25.1",
    "pyloudnorm>=0.2.0",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "syncedlyrics>=1.0.1",
    "twilio>=9.0.0",
    "uvicorn[standard]>=0.41.0",
    "yt-dlp>=2025.1.0",
    "beat-this>=1.1.0",
    "essentia; python_version < '3.12'",
]

[project.optional-dependencies]
local = [
    "audio-separator>=0.41.1",
    "onnxruntime>=1.24.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
dev = "musicmixer.main:dev"
serve = "musicmixer.main:serve"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/musicmixer"]
